--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "node": ">=6"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "start": "cross-env NODE_ENV=development node server",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
     "lint:eslint": "eslint --ignore-path .gitignore --ignore-pattern internals/scripts",
@@ -107,7 +107,6 @@
       ],
       "jsx-a11y/aria-props": 2,
       "jsx-a11y/heading-has-content": 0,
-      "jsx-a11y/href-no-hash": 2,
       "jsx-a11y/label-has-for": 2,
       "jsx-a11y/mouse-events-have-key-events": 2,
       "jsx-a11y/role-has-required-aria-props": 2,
@@ -128,14 +127,12 @@
       "react/require-default-props": 0,
       "react/require-extension": 0,
       "react/self-closing-comp": 0,
-      "redux-saga/no-yield-in-race": 2,
-      "redux-saga/yield-effects": 2,
       "require-yield": 0
     },
     "settings": {
       "import/resolver": {
         "webpack": {
-          "config": "./internals/webpack/webpack.prod.babel.js"
+          "config": "./config/webpack/webpack.config.prod.js"
         }
       }
     }
@@ -169,6 +166,12 @@
     "testRegex": "tests/.*\\.test\\.js$"
   },
   "dependencies": {
+    "chalk": "^2.3.0",
+    "eventsource-polyfill": "^0.9.6",
+    "express": "^4.16.2",
+    "fontfaceobserver": "^2.0.13",
+    "ip": "^1.1.5",
+    "minimist": "^1.2.0",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -176,9 +179,13 @@
     "react-loadable": "^5.3.1",
     "react-router-dom": "^4.2.2",
     "sanitize.css": "^5.0.0",
-    "styled-components": "^2.4.0"
+    "styled-components": "^2.4.0",
+    "webpack-dev-middleware": "^2.0.4",
+    "webpack-hot-middleware": "^2.21.0",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
+    "add-asset-html-webpack-plugin": "^2.1.2",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
@@ -194,20 +201,27 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "case-sensitive-paths-webpack-plugin": "^2.1.1",
+    "circular-dependency-plugin": "^4.4.0",
+    "cross-env": "^5.1.3",
+    "css-loader": "^0.28.9",
     "enzyme": "^3.3.0",
     "eslint": "^4.15.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-import-resolver-webpack": "^0.8.4",
+    "eslint-loader": "^1.9.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
+    "exports-loader": "^0.6.4",
     "file-loader": "^1.1.6",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.30.1",
     "image-webpack-loader": "^3.4.2",
     "jest": "^22.1.1",
     "lint-staged": "^6.0.0",
     "pre-commit": "^1.2.2",
+    "react-dev-utils": "^5.0.0",
     "react-test-renderer": "^16.2.0",
     "style-loader": "^0.19.1",
     "url-loader": "^0.6.2",
