--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "start": "cross-env NODE_ENV=development node server",
-    "build": "node scripts/build.js",
+    "build": "cross-env NODE_ENV=production node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
     "lint:eslint": "eslint --ignore-path .gitignore --ignore-pattern internals/scripts",
     "lint:staged": "lint-staged"
@@ -40,7 +40,7 @@
     "env": {
       "production": {
         "only": [
-          "app"
+          "src"
         ],
         "plugins": [
           "transform-react-remove-prop-types",
@@ -139,12 +139,12 @@
   },
   "jest": {
     "collectCoverageFrom": [
-      "app/**/*.{js,jsx}",
-      "!app/**/*.test.{js,jsx}",
-      "!app/*/RbGenerated*/*.{js,jsx}",
-      "!app/app.js",
-      "!app/global-styles.js",
-      "!app/*/*/Loadable.{js,jsx}"
+      "src/**/*.{js,jsx}",
+      "!src/**/*.test.{js,jsx}",
+      "!src/*/RbGenerated*/*.{js,jsx}",
+      "!src/index.js",
+      "!src/global-styles.js",
+      "!src/*/*/Loadable.{js,jsx}"
     ],
     "coverageThreshold": {
       "global": {
@@ -156,7 +156,7 @@
     },
     "moduleDirectories": [
       "node_modules",
-      "app"
+      "src"
     ],
     "moduleNameMapper": {
       ".*\\.(css|less|styl|scss|sass)$": "<rootDir>/internals/mocks/cssModule.js",
@@ -215,6 +215,7 @@
     "eslint-plugin-react": "^7.5.1",
     "exports-loader": "^0.6.4",
     "file-loader": "^1.1.6",
+    "fs-extra": "^5.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.30.1",
     "image-webpack-loader": "^3.4.2",
