--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=development node server",
     "build": "yarn coverage && cross-env NODE_ENV=production node scripts/build.js",
-    "serve": "cross-env NODE_ENV=production node server",
+    "serve": "cross-env NODE_ENV=production HTTPS=true node server",
     "prod": "yarn build && yarn serve",
     "test": "cross-env NODE_ENV=test jest",
     "coverage": "yarn test --coverage",
