--- a/package.json
+++ b/package.json
@@ -242,6 +242,7 @@
     "image-webpack-loader": "^3.4.2",
     "jest": "^22.1.1",
     "lint-staged": "^6.0.0",
+    "offline-plugin": "^4.9.0",
     "pre-commit": "^1.2.2",
     "react-dev-utils": "^5.0.0",
     "react-test-renderer": "^16.2.0",
