--- a/package.json
+++ b/package.json
@@ -206,12 +206,15 @@
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.16.2",
     "fontfaceobserver": "^2.0.13",
+    "i18next": "^10.3.0",
+    "i18next-browser-languagedetector": "^2.1.0",
     "ip": "^1.1.5",
     "minimist": "^1.2.0",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-helmet": "^5.2.0",
+    "react-i18next": "^7.3.4",
     "react-loadable": "^5.3.1",
     "react-router-dom": "^4.2.2",
     "sanitize.css": "^5.0.0",
@@ -253,6 +256,7 @@
     "fs-extra": "^5.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.30.1",
+    "i18next-resource-store-loader": "^0.1.2",
     "image-webpack-loader": "^3.4.2",
     "jest": "^22.1.1",
     "lint-staged": "^6.0.0",
