--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
         }
       ],
       "react",
-      "stage-0"
+      "stage-0",
+      "flow"
     ],
     "env": {
       "production": {
@@ -235,6 +236,7 @@
     "babel-plugin-transform-react-inline-elements": "^6.22.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.12",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "case-sensitive-paths-webpack-plugin": "^2.1.1",
@@ -253,6 +255,7 @@
     "eslint-plugin-react": "^7.5.1",
     "exports-loader": "^0.6.4",
     "file-loader": "^1.1.6",
+    "flow-bin": "^0.64.0",
     "fs-extra": "^5.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.30.1",
