--- a/package.json
+++ b/package.json
@@ -211,6 +211,8 @@
     "i18next-browser-languagedetector": "^2.1.0",
     "ip": "^1.1.5",
     "minimist": "^1.2.0",
+    "mobx": "^3.5.1",
+    "mobx-react": "^4.4.1",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
