add a todo list example
- add styles for todo list
- add styles for header
- configure flowtype
- add flowtype custom library
- make styles an alias

--- a/.flowconfig
+++ b/.flowconfig
@@ -3,9 +3,12 @@
 [include]
 
 [libs]
+flowLib/
 
 [lints]
 
 [options]
+esproposal.decorators=ignore
+module.name_mapper='^styles' ->'<PROJECT_ROOT>/src/styles'
 
 [strict]
