--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
   "pre-commit": "lint:staged",
   "babel": {
     "plugins": [
-      "styled-components"
+      "styled-components",
+      "transform-decorators-legacy"
     ],
     "presets": [
       [
@@ -79,7 +80,8 @@
     },
     "plugins": [
       "react",
-      "jsx-a11y"
+      "jsx-a11y",
+      "flowtype"
     ],
     "parserOptions": {
       "ecmaVersion": 6,
@@ -128,6 +130,12 @@
       "no-confusing-arrow": 0,
       "no-console": 1,
       "no-use-before-define": 0,
+      "no-param-reassign": [
+        "error",
+        {
+          "props": false
+        }
+      ],
       "prefer-template": 2,
       "react/forbid-prop-types": 0,
       "react/jsx-first-prop-new-line": [
@@ -139,7 +147,9 @@
       "react/require-default-props": 0,
       "react/require-extension": 0,
       "react/self-closing-comp": 0,
-      "require-yield": 0
+      "require-yield": 0,
+      "flowtype/define-flow-type": 1,
+      "flowtype/use-flow-type": 1
     },
     "settings": {
       "import/resolver": {
@@ -157,7 +167,10 @@
       "stylelint-config-standard",
       "stylelint-config-styled-components"
     ],
-    "syntax": "scss"
+    "syntax": "scss",
+    "rules": {
+      "number-leading-zero": "never"
+    }
   },
   "jest": {
     "collectCoverageFrom": [
@@ -167,7 +180,6 @@
       "!src/index.js",
       "!src/i18n.js",
       "!src/styles/*.js",
-      "!src/globalStyles.js",
       "!src/*/*/Loadable.{js,jsx}"
     ],
     "coverageThreshold": {
@@ -207,6 +219,7 @@
   },
   "dependencies": {
     "chalk": "^2.3.0",
+    "colors.js": "^1.2.4",
     "compression": "^1.7.1",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.16.2",
@@ -238,6 +251,7 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-dynamic-import-node": "^1.2.0",
     "babel-plugin-styled-components": "^1.4.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "babel-plugin-transform-react-constant-elements": "^6.23.0",
     "babel-plugin-transform-react-inline-elements": "^6.22.0",
@@ -257,6 +271,7 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-import-resolver-webpack": "^0.8.4",
     "eslint-loader": "^1.9.0",
+    "eslint-plugin-flowtype": "^2.42.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
