--- a/package.json
+++ b/package.json
@@ -236,6 +236,7 @@
     "react-helmet": "^5.2.0",
     "react-i18next": "^7.3.4",
     "react-loadable": "^5.3.1",
+    "react-markdown": "^3.2.0",
     "react-router-dom": "^4.2.2",
     "sanitize.css": "^5.0.0",
     "styled-components": "^3.1.6",
