--- a/package.json
+++ b/package.json
@@ -236,7 +236,6 @@
     "react-helmet": "^5.2.0",
     "react-i18next": "^7.3.4",
     "react-loadable": "^5.3.1",
-    "react-markdown": "^3.2.0",
     "react-router-dom": "^4.2.2",
     "sanitize.css": "^5.0.0",
     "styled-components": "^3.1.6",
@@ -286,6 +285,7 @@
     "image-webpack-loader": "^4.0.0",
     "jest": "^22.1.1",
     "lint-staged": "^6.0.0",
+    "markdown-loader": "^2.0.2",
     "offline-plugin": "^4.9.0",
     "pre-commit": "^1.2.2",
     "react-dev-utils": "^5.0.0",
