add request@2.34 because of peerDependencies

--- a/package.json
+++ b/package.json
@@ -290,6 +290,7 @@
     "pre-commit": "^1.2.2",
     "react-dev-utils": "^5.0.0",
     "react-test-renderer": "^16.2.0",
+    "request": "2.34",
     "shelljs": "^0.8.1",
     "style-loader": "^0.20.1",
     "stylelint": "^9.0.0",
