--- a/package.json
+++ b/package.json
@@ -297,6 +297,7 @@
     "stylelint-config-standard": "^18.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.2.2",
+    "typescript": "^2.7.2",
     "url-loader": "^0.6.2",
     "webpack": "^3.0.0",
     "webpack-dev-middleware": "^2.0.4",
