--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "serve": "cross-env NODE_ENV=production HTTPS=true node server",
     "prod": "yarn build && yarn serve",
     "test": "cross-env NODE_ENV=test jest",
+    "test:debug": "cross-env NODE_ENV=test node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --watchAll",
     "coverage": "yarn test --coverage",
     "watch": "cross-env NODE_ENV=test jest --watchAll",
     "build:dll": "node scripts/buildDll.js",
@@ -179,7 +180,7 @@
       "!src/*/RbGenerated*/*.{js,jsx}",
       "!src/index.js",
       "!src/i18n.js",
-      "!src/styles/*.js",
+      "!src/styles/**/*.js",
       "!src/*/*/Loadable.{js,jsx}"
     ],
     "coverageThreshold": {
@@ -196,7 +197,9 @@
     ],
     "moduleNameMapper": {
       ".*\\.(css|less|styl|scss|sass)$": "<rootDir>/config/mocks/cssModule.js",
-      ".*\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/config/mocks/image.js"
+      ".*\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/config/mocks/image.js",
+      ".*\\.(md)$": "<rootDir>/config/mocks/md.mock.js",
+      "i18next-resource-store-loader!./locales/index": "<rootDir>src/locales/en/translation.json"
     },
     "setupTestFrameworkScriptFile": "<rootDir>/config/setup.tests.js",
     "testRegex": "tests/.*\\.test\\.js$"
@@ -292,6 +295,7 @@
     "react-test-renderer": "^16.2.0",
     "request": "2.34",
     "shelljs": "^0.8.1",
+    "sinon": "^4.4.2",
     "style-loader": "^0.20.1",
     "stylelint": "^9.0.0",
     "stylelint-config-standard": "^18.0.0",
