--- a/package.json
+++ b/package.json
@@ -245,7 +245,11 @@
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
-    "@storybook/react": "^3.3.12",
+    "@storybook/addon-actions": "^3.3.15",
+    "@storybook/addon-info": "^3.3.15",
+    "@storybook/addon-options": "^3.3.15",
+    "@storybook/addons": "^3.3.15",
+    "@storybook/react": "^3.3.15",
     "add-asset-html-webpack-plugin": "^2.1.2",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
